...
                                    .font(Font.title3.weight(.bold))
                                    .foregroundColor(isDetail ? .white : .purple)
                            })
                            Spacer()
                        }
                    }
                    Text(isDetail ? detailHeading : (condition ? "Pesquise" : "Pesquise por uma empresa"))
                        .font(condition ? .title : Font.system(size: 40, weight: .bold))
                        .bold()
                        .frame(maxWidth: .infinity, alignment: !condition ? .leading : .center)
                }
                if isDetail {
                    Text(detailSubheading)
...
